...
                <outlet property="usernameField" destination="VLn-g8-y9A" id="NKX-OV-nyp"/>
                <outlet property="window" destination="Idt-6g-5G1" id="ONL-2q-VCG"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" frameAutosaveName="" animationBehavior="default" id="Idt-6g-5G1">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
            <rect key="contentRect" x="179" y="216" width="471" height="167"/>
            <rect key="screenRect" x="0.0" y="0.0" width="1792" height="1089"/>
            <view key="contentView" id="IFq-av-PF6">
                <rect key="frame" x="0.0" y="0.0" width="471" height="167"/>
...
